--- a/package.json
+++ b/package.json
@@ -2,5 +2,24 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "uuid": "^13.0.0"
-  }
+  },
+  "name": "hyperque",
+  "version": "1.0.0",
+  "description": "HyperQue is a tool specifically aimed at roblox game developers to be able to make implementing cross-server matchmaking basically effortless, it requires almost 0 knowledge in backend development and all they have to do is focus on the luau scripting side of things.",
+  "main": "server.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/72sevenzy2/hyperque.git"
+  },
+  "author": "72",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/72sevenzy2/hyperque/issues"
+  },
+  "homepage": "https://github.com/72sevenzy2/hyperque#readme"
 }
