--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "name": "hyperque",
   "version": "1.0.0",
   "description": "HyperQue is a tool specifically aimed at roblox game developers to be able to make implementing cross-server matchmaking basically effortless, it requires almost 0 knowledge in backend development and all they have to do is focus on the luau scripting side of things.",
+  "keywords": ["roblox", "cross-server", "matchmaking", "tools", "backend
+  "],
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
